Calc2.0 but fixes

--- a/calc-webapp/src/main/webapp/workspace-list.html
+++ b/calc-webapp/src/main/webapp/workspace-list.html
@@ -1,7 +1,7 @@
 <div class="page-section" id="workspace-edit-settings">
 	
-	<div class="row no-margin workspace-list height20">
-	</div>
+<!-- 	<div class="row no-margin workspace-list height20"> -->
+<!-- 	</div> -->
 
 	<div class="upload-progress-section row no-margin no-padding">
 		<div class="col-md-5 col-md-offset-3" style="padding-top: 6px;">
@@ -14,8 +14,19 @@
 	    </div>
 	</div>	
 	
-	<div class="row no-margin workspace-tree height70">
+	<div class="row no-margin height90 ws-list-view" style="overflow: hidden">
+		<div class="col-md-2 height100">
+			<div class="row no-margin height100 workspace-list">
+			</div>
+		</div>
+		<div class="col-md-10 height100">
+			<div class="row no-margin height100 workspace-tree">
+			</div>
+		</div>
 	</div>
+	
+<!-- 	<div class="row no-margin workspace-tree height70"> -->
+<!-- 	</div> -->
 	<div class="row no-margin workspace-list-buttons height10">
 		<div class="col-md-2 col-md-offset-3">
 			<button type="button" class="btn btn-default width100" name="activate-btn"><i class="fa fa-check-circle-o"></i>&nbsp;Activate</button>
