changed dimension label to variable label

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -236,9 +236,15 @@
 			</div>
 			<div class="col-md-2">
 				<div class="logo">
-					<img src="img/of_calc_logo.png" width="40em">CALC
+<!-- 					<img src="img/of_calc_logo.png" width="40em">CALC -->
 <!-- 					<img src="img/of-logo.png" width="30em">pen Foris Calc -->
-					<div class="application-version"></div>
+<!-- 					<div class="application-version"></div> -->
+
+					<button class="calc-btn"><img src="img/of_calc_logo.png" width="40px"></button>
+<!-- 					<div class="calc-options"> -->
+<!-- 							<div class="col-md-12"><button class="btn btn-default quick-start"><i class="fa fa-book"></i>Quick Start Guide</button></div> -->
+<!-- 							<div class="col-md-12">CALC <span class="application-version"></span></div> -->
+<!-- 					</div> -->
 				</div>
 			</div>
 		</div>
