added Apply area weighted method (by base unit area)

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -221,7 +221,8 @@
 		<div class="row height100">
 			<div class="col-md-2">
 				<button type="button" class="btn default-btn back" href="#settings">
-				<i class="icon-caret-left icon-5"></i>
+<!-- 				<i class="icon-caret-left icon-5" style="font-size:10px"></i> -->
+				<i class="fa fa-home"></i>
 				</button>
 			</div>
 			<div class="col-md-8" >
@@ -241,10 +242,10 @@
 <!-- 					<div class="application-version"></div> -->
 
 					<button class="calc-btn"><img src="img/of_calc_logo.png" width="40px"></button>
-<!-- 					<div class="calc-options"> -->
-<!-- 							<div class="col-md-12"><button class="btn btn-default quick-start"><i class="fa fa-book"></i>Quick Start Guide</button></div> -->
-<!-- 							<div class="col-md-12">CALC <span class="application-version"></span></div> -->
-<!-- 					</div> -->
+					<div class="calc-options">
+							<div class="col-md-12"><button class="btn btn-default quick-start"><i class="fa fa-book"></i>&nbsp Quick Start Guide</button></div>
+							<div class="col-md-12 application-version-container">CALC <span class="application-version"></span></div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -405,7 +406,7 @@
 						</div>
 					</div>
 					<!-- data table -->
-					<div class="row no-margin height95" style="overflow: auto">
+					<div class="row no-margin height94" style="overflow: auto">
 <!-- 						<div class="col-md-12 no-padding"> -->
 							<table class="table table-results">
 						        <thead>
@@ -533,7 +534,8 @@
 	<script src="./js/calc/calc-autocomplete.js"></script>
 	<script src="./js/calc/r-script.js"></script>
 	<script src="./js/calc/ui/r-editor.js"></script>
-	
+	<script src="./js/calc/manager/ui/calc-options.js"></script>
+		
 	<!-- ui components -->
 	<script src="./js/calc/ui/jquery-ext.js"></script>
 	<script src="./js/calc/ui/progress-bar.js"></script>
