--- a/calc-webapp/src/main/webapp/sampling-design.html
+++ b/calc-webapp/src/main/webapp/sampling-design.html
@@ -28,6 +28,13 @@
 								<select class="form-control" name="sampling-unit"></select>
 							</div>
 						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<div class="checkbox" style="font-size: 0.8em;">
+									<label> <input type="checkbox" name="apply_area_weighted"> Apply area weighted method (by base unit area) </label>
+								</div>
+							</div>
+						</div>
 					</div>
 					<!-- 2 phases -->					
 					<div class="row option step step-1 height100">
