added possibility to imoprt stratum areas through csv input file

--- a/calc-webapp/src/main/webapp/aoi.html
+++ b/calc-webapp/src/main/webapp/aoi.html
@@ -33,8 +33,13 @@
 		<div class="row levels">
 			
 		</div>
-		<div class="row col-md-2 col-md-offset-5">
-			<button type="button" class="btn btn-default width100" name="import-btn">Import</button>
+		<div class="row ">
+			<div class="col-md-2 col-md-offset-4 text-center">
+				<button type="button" class="btn btn-default width90" name="import-btn">Import</button>
+			</div>
+			<div class="col-md-2 text-center">
+				<button type="button" class="btn btn-default width90" name="cancel-btn">Cancel</button>
+			</div>
 		</div>
 	</div>
 	
