--- a/calc-webapp/src/main/webapp/sampling-design.html
+++ b/calc-webapp/src/main/webapp/sampling-design.html
@@ -22,7 +22,7 @@
 				<div class="col-md-8 height100">
 					<!-- Sampling unit selection -->
 					<div class="row option step step-0 height100">
-						<div class="row">Base Unit</div>
+						<div class="row"><h4>Base Unit</h4></div>
 						<div class="row">
 							<div class="col-md-12">
 								<select class="form-control" name="sampling-unit"></select>
@@ -30,7 +30,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<div class="checkbox" style="font-size: 0.8em;">
+								<div class="checkbox">
 									<label> <input type="checkbox" name="apply_area_weighted"> Apply area weighted method (by base unit area) </label>
 								</div>
 							</div>
