tested strata import ws/updated job status UI

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -243,7 +243,7 @@
 
 					<button class="calc-btn"><img src="img/of_calc_logo.png" width="40px"></button>
 					<div class="calc-options">
-							<div class="col-md-12"><button class="btn btn-default quick-start"><i class="fa fa-book"></i>&nbsp Quick Start Guide</button></div>
+<!-- 							<div class="col-md-12"><button class="btn btn-default quick-start"><i class="fa fa-book"></i>&nbsp Quick Start Guide</button></div> -->
 							<div class="col-md-12 application-version-container">CALC <span class="application-version"></span></div>
 					</div>
 				</div>
@@ -260,16 +260,18 @@
 					<div class="col-md-offset-2 col-md-8">
 						<h4 class="modal-title status"></h4>
 					</div>	
-					<div class="col-md-2 download-r-code">
-						<button class="btn no-background col-md-10">
-							<i class="fa fa-download"></i>
-							<img src="img/Rlogo.jpg" width="20px" height="20px">
-						</button>
-					</div>				
+<!-- 					<div class="col-md-2 download-r-code"> -->
+<!-- 						<button class="btn no-background col-md-10"> -->
+<!-- 							<i class="fa fa-download"></i> -->
+<!-- 							<img src="img/Rlogo.jpg" width="20px" height="20px"> -->
+<!-- 						</button> -->
+<!-- 					</div>				 -->
 				</div>
 				<div class="modal-body col-md-12">
-					<div class="task-section col-md-12"></div>
-					<div class="row log-section col-md-12">
+					<div class="row task-section-row">
+						<div class="task-section col-md-10 col-md-offset-1"></div>
+					</div>
+					<div class="row log-section">
 						<div class="col-md-2">
 							<button type="button" class="btn option-btn-selected toggle-log-btn">Log</button>
 						</div>
