added explanatory text to sampling design page

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -169,7 +169,7 @@
 			  			</div>
 			  		</div>
 		  			<div class="row group-buttons">
-		  				<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="aoi.html">Areas of interest</button>
+		  				<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="aoi.html">Reporting units</button>
 		 				<button type="button" class="btn btn-default btn-home settings-btn aoi-required" href="sampling-design.html">Sampling design</button>
 <!-- 		 				<button type="button" class="btn btn-default btn-home settings-btn sampling-design-required" href="aggregation.html">Base unit area formula</button> -->
 	 				</div>
