added components for importing csv files to sampling design.

--- a/calc-webapp/src/main/webapp/html/settings/sampling-design-erd.html
+++ b/calc-webapp/src/main/webapp/html/settings/sampling-design-erd.html
@@ -1,6 +1,9 @@
 <div class="sampling-design-erd">
 	<div class="base-unit-container"></div>
-	<div class="two-phase-container"></div>
-	<div class="two-stage-container"></div>
-	<div class="stratum-aoi-container"></div>
+	<div class="two-phases-container"></div>
+	<div class="two-stages-container"></div>
+	<div class="stratum-aoi-container">
+		<div class="stratum-container"></div>
+		<div class="aoi-container"></div>
+	</div>
 </div>
