sampling design2: added twoPhases/twoStages/stratified; added visual table joins

--- a/calc-webapp/src/main/webapp/html/settings/sampling-design-erd.html
+++ b/calc-webapp/src/main/webapp/html/settings/sampling-design-erd.html
@@ -1,9 +1,16 @@
 <div class="sampling-design-erd">
-	<div class="base-unit-container"></div>
-	<div class="two-phases-container"></div>
-	<div class="two-stages-container"></div>
+	<div>
+		<div class="base-unit-container one-row"></div>
+	</div>
+	<div>
+		<div class="two-phases-container one-row"></div>
+	</div>
+	<div class="two-stages-container">
+		<div class="psu-container two-rows"></div>
+		<div class="ssu-container two-rows"></div>
+	</div>
 	<div class="stratum-aoi-container">
-		<div class="stratum-container"></div>
-		<div class="aoi-container"></div>
+		<div class="stratum-container two-rows"></div>
+		<div class="aoi-container two-rows"></div>
 	</div>
 </div>
