--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -245,6 +245,10 @@
 					<div class="calc-options">
 <!-- 							<div class="col-md-12"><button class="btn btn-default quick-start"><i class="fa fa-book"></i>&nbsp Quick Start Guide</button></div> -->
 							<div class="col-md-12 application-version-container">CALC <span class="application-version"></span></div>
+							<div class="col-md-12 of-link-container">
+								<a class="of-link" href="http://www.openforis.org/" target="_blank"><img src="img/openforis_logo.png"></a>
+<!-- 								<a class="of-link" href="http://www.openforis.org/tools/calc.html" target="_blank"><img src="img/openforis_logo.png"></a> -->
+							</div>
 					</div>
 				</div>
 			</div>
@@ -494,6 +498,8 @@
 	<script src="./js/jquery/plugin/caretpixelpos/jquery.caretpixelpos.js"></script>
 	<script src="./js/jquery/plugin/caretpixelpos/selection_range.js"></script>
 	<script src="./js/jquery/plugin/caretpixelpos/string_splitter.js"></script>
+<!-- 	Jquery connections -->
+	<script src="./js/jquery/plugin/jquery.connections.js"></script>
 	
 	<!-- 	Event BUS -->
 	<script src="./js/bus/EventBus.js"></script>
@@ -598,16 +604,20 @@
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-edit-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-step-buttons-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-erd-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-erd-table-joins-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-step-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/base-unit-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/two-phases-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/psu-two-stages-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/ssu-two-stages-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/stratum-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/erd-table-data-provider.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/erd-table.js"></script>
+	
 <!-- 	<script src="./js/calc/manager/ui/legacy/sampling-design-manager.js"></script> -->
 <!-- 	<script src="./js/calc/manager/ui/legacy/stratum-manager.js"></script> -->
 <!-- 	<script src="./js/calc/manager/ui/legacy/phase1-manager.js"></script> -->
-	<script src="./js/calc/manager/ui/legacy/two-stages-manager.js"></script>
+<!-- 	<script src="./js/calc/manager/ui/legacy/two-stages-manager.js"></script> -->
 	<script src="./js/calc/manager/ui/legacy/cluster-manager.js"></script>
 	<script src="./js/calc/manager/ui/legacy/aoi-join-manager.js"></script>
 	
