sampling design erd. completed visualization. added validation to base unit/stratified/two-phases.

--- a/calc-webapp/src/main/webapp/html/settings/sampling-design-erd.html
+++ b/calc-webapp/src/main/webapp/html/settings/sampling-design-erd.html
@@ -6,10 +6,11 @@
 		<div class="two-phases-container one-row"></div>
 	</div>
 	<div class="two-stages-container">
-		<div class="psu-container two-rows"></div>
-		<div class="ssu-container two-rows"></div>
+		<div class="psu-container one-row"></div>
+<!-- 		<div class="psu-container two-rows"></div> -->
 	</div>
 	<div class="stratum-aoi-container">
+		<div class="ssu-container two-rows"></div>
 		<div class="stratum-container two-rows"></div>
 		<div class="aoi-container two-rows"></div>
 	</div>
