--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -600,26 +600,30 @@
 	<!-- settings  -->
 <!-- 	Sampling Design managers -->
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-manager.js"></script>
-	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-validator.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-edit-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-step-buttons-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-validator.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-erd-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-erd-table-joins-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/erd-table.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/erd-table-data-provider.js"></script>
+	
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-step-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/base-unit-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/two-phases-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/psu-two-stages-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/ssu-two-stages-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/stratum-manager.js"></script>
-	<script src="./js/calc/manager/ui/settings/sampling-design/erd-table-data-provider.js"></script>
-	<script src="./js/calc/manager/ui/settings/sampling-design/erd-table.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/cluster-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/reporting-unit-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/connection-manager.js"></script>
 	
 <!-- 	<script src="./js/calc/manager/ui/legacy/sampling-design-manager.js"></script> -->
 <!-- 	<script src="./js/calc/manager/ui/legacy/stratum-manager.js"></script> -->
 <!-- 	<script src="./js/calc/manager/ui/legacy/phase1-manager.js"></script> -->
 <!-- 	<script src="./js/calc/manager/ui/legacy/two-stages-manager.js"></script> -->
-	<script src="./js/calc/manager/ui/legacy/cluster-manager.js"></script>
-	<script src="./js/calc/manager/ui/legacy/aoi-join-manager.js"></script>
+<!-- 	<script src="./js/calc/manager/ui/legacy/cluster-manager.js"></script> -->
+<!-- 	<script src="./js/calc/manager/ui/legacy/aoi-join-manager.js"></script> -->
 	
 <!-- 		<script src="./js/calc/manager/ui/aggregation-manager.js"></script> -->
 	<script src="./js/calc/manager/ui/aoi-manager.js"></script>
