sd:twostages validaton.added view mode. aoi import.updated style and animation

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -170,7 +170,7 @@
 			  		</div>
 		  			<div class="row group-buttons">
 		  				<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="aoi.html">Reporting units</button>
-		 				<button type="button" class="btn btn-default btn-home settings-btn aoi-required" href="html/settings/sampling-design.html">Sampling design</button>
+		 				<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="html/settings/sampling-design.html">Sampling design</button>
 <!-- 		 				<button type="button" class="btn btn-default btn-home settings-btn sampling-design-required" href="aggregation.html">Base unit area formula</button> -->
 	 				</div>
 		  		</div>
@@ -616,6 +616,7 @@
 	<script src="./js/calc/manager/ui/settings/sampling-design/stratum-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/cluster-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/reporting-unit-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/reporting-unit-import-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/connection-manager.js"></script>
 	
 <!-- 	<script src="./js/calc/manager/ui/legacy/sampling-design-manager.js"></script> -->
