--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -153,27 +153,28 @@
 		  		<div class="row group">
 			  		<div class="row group-header">
 			  			<div class="col-md-8 col-md-offset-2">
-			  				Calc metadata
+			  				Inventory metadata
 			  			</div>
 			  		</div>
 		  			<div class="row group-buttons">
+		  				<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="html/settings/sampling-design.html">Sampling design</button>
 			 			<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="categories.html">Categories</button>
 			 			<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="equation-list.html">External equations</button>
 		  			</div>
 		  		</div>
 		  		<!-- inventory settings -->
-		 		<div class="row group">
-		 			<div class="row group-header">
-			  			<div class="col-md-8 col-md-offset-2">
-			  				Inventory
-			  			</div>
-			  		</div>
-		  			<div class="row group-buttons">
-		  				<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="aoi.html">Reporting units</button>
-		 				<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="html/settings/sampling-design.html">Sampling design</button>
+<!-- 		 		<div class="row group"> -->
+<!-- 		 			<div class="row group-header"> -->
+<!-- 			  			<div class="col-md-8 col-md-offset-2"> -->
+<!-- 			  				Inventory -->
+<!-- 			  			</div> -->
+<!-- 			  		</div> -->
+<!-- 		  			<div class="row group-buttons"> -->
+<!-- 		  				<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="aoi.html">Reporting units</button> -->
+<!-- 		 				<button type="button" class="btn btn-default btn-home settings-btn workspace-required" href="html/settings/sampling-design.html">Sampling design</button> -->
 <!-- 		 				<button type="button" class="btn btn-default btn-home settings-btn sampling-design-required" href="aggregation.html">Base unit area formula</button> -->
-	 				</div>
-		  		</div>
+<!-- 	 				</div> -->
+<!-- 		  		</div> -->
 		  		<!-- workspace settings -->
 		 		<div class="row group" id="workspace-settings">
 		 			<div class="row group-header">
@@ -618,6 +619,9 @@
 	<script src="./js/calc/manager/ui/settings/sampling-design/reporting-unit-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/reporting-unit-import-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/connection-manager.js"></script>
+	
+	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-view-table-data-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/reporting-unit-view-data-manager.js"></script>
 	
 <!-- 	<script src="./js/calc/manager/ui/legacy/sampling-design-manager.js"></script> -->
 <!-- 	<script src="./js/calc/manager/ui/legacy/stratum-manager.js"></script> -->
