added table data visualizers for sampling design

--- a/calc-webapp/src/main/webapp/html/settings/sampling-design.html
+++ b/calc-webapp/src/main/webapp/html/settings/sampling-design.html
@@ -261,7 +261,7 @@
 	
 	
 	
-	<div class="col-md-12 sampling-design-table-data height100 width100" >
+	<div class="col-md-12 sampling-design-table-data closed height100 width100" >
 		<div class="row height10">
 			<div class='col-md-3'>
 				<button class="btn no-background height100 close-btn">
