--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -576,6 +576,7 @@
 	<script src="./js/calc/manager/data/tree.js"></script>
 	<script src="./js/calc/manager/data/data-view-provider.js"></script>
 	<script src="./js/calc/manager/data/table-data-provider.js"></script>
+	<script src="./js/calc/manager/data/strata-data-provider.js"></script>
 	<script src="./js/calc/manager/data/calculation-step-test-data-provider.js"></script>
 	<script src="./js/calc/manager/data/csv-table-import-manager.js"></script>
 	<script src="./js/calc/manager/data/table-join.js"></script>
@@ -622,6 +623,7 @@
 	
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-view-table-data-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/reporting-unit-view-data-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/view-table-data-manager.js"></script>
 	
 <!-- 	<script src="./js/calc/manager/ui/legacy/sampling-design-manager.js"></script> -->
 <!-- 	<script src="./js/calc/manager/ui/legacy/stratum-manager.js"></script> -->
