--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -579,8 +579,8 @@
 	<script src="./js/calc/manager/data/strata-data-provider.js"></script>
 	<script src="./js/calc/manager/data/calculation-step-test-data-provider.js"></script>
 	<script src="./js/calc/manager/data/csv-table-import-manager.js"></script>
-	<script src="./js/calc/manager/data/table-join.js"></script>
-	<script src="./js/calc/manager/data/table-column-selector.js"></script>
+<!-- 	<script src="./js/calc/manager/data/table-join.js"></script> -->
+<!-- 	<script src="./js/calc/manager/data/table-column-selector.js"></script> -->
 	
 	<!-- ui managers -->
 	<script src="./js/calc/manager/ui/home-calculation-manager.js"></script>
@@ -633,7 +633,7 @@
 <!-- 	<script src="./js/calc/manager/ui/legacy/aoi-join-manager.js"></script> -->
 	
 <!-- 		<script src="./js/calc/manager/ui/aggregation-manager.js"></script> -->
-	<script src="./js/calc/manager/ui/aoi-manager.js"></script>
+<!-- 	<script src="./js/calc/manager/ui/aoi-manager.js"></script> -->
 	<script src="./js/calc/manager/ui/home-settings-manager.js"></script>
 	<script src="./js/calc/manager/ui/workspace-settings-manager.js"></script>
 	
