added navigation path to sampling design

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -603,6 +603,7 @@
 <!-- 	Sampling Design managers -->
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-edit-manager.js"></script>
+	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-nav-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-step-buttons-manager.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-validator.js"></script>
 	<script src="./js/calc/manager/ui/settings/sampling-design/sampling-design-erd-manager.js"></script>
