updated sd edit navigation. updated ws page style

--- a/calc-webapp/src/main/webapp/workspace-list.html
+++ b/calc-webapp/src/main/webapp/workspace-list.html
@@ -16,7 +16,9 @@
 	
 	<div class="row no-margin height90 ws-list-view" style="overflow: hidden">
 		<div class="col-md-2 height100">
-			<div class="row no-margin height100 workspace-list">
+			<div class="row no-margin height10 workspace-button">
+			</div>
+			<div class="row no-margin height90 workspace-list">
 			</div>
 		</div>
 		<div class="col-md-10 height100">
