updated sd UI: styles/highlights/positions

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -132,7 +132,7 @@
 	<div class="modal fade" id="add-variable-modal">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<div class="modal-body calculation">
+				<div class="modal-body">
 					<form class="form-vertical" method="POST">
 						<input type="hidden" class="form-control" name="entityId" />
 						<input type="hidden" class="form-control" name="type" />  
