--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -119,8 +119,8 @@
 					</div>
 					
 					<div class="form-group buttons" style="margin: 0px">
-						<div class="col-md-2 col-md-offset-5" style="text-align: center;">
-							<button type="submit" class="btn btn-default" style="width: 100%">Save</button>
+						<div class="col-md-4 col-md-offset-4" style="text-align: center;">
+							<button type="submit" class="btn btn-action width70"><i class="fa fa-floppy-o"></i>&nbsp;Save</button>
 						</div>
 					</div>
 				
