small ui changes/ added active ws name to footer/ added link to user manual

--- a/calc-webapp/src/main/webapp/html/settings/sampling-design.html
+++ b/calc-webapp/src/main/webapp/html/settings/sampling-design.html
@@ -30,8 +30,8 @@
 							</div>
 						</div>
 						<div class="hint step-2">
-							<i class="fa fa-hand-o-right"></i>&nbsp;In the Double or Two phases sampling initially a sample of units is selected for obtaining auxiliary information only, 
-								and then a second sample is selected in which the variable of interest is observed in addition to the auxiliary information. Double sampling is also called two-phases sampling.
+							<i class="fa fa-hand-o-right"></i>&nbsp;In the Double or Two phase sampling initially a sample of units is selected for obtaining auxiliary information only, 
+								and then a second sample is selected in which the variable of interest is observed in addition to the auxiliary information. Double sampling is also called two-phase sampling.
 						</div>
 						<div class="hint step-3">
 							<i class="fa fa-hand-o-right"></i>&nbsp;In the two-stage sampling design the population is partitioned into groups, like cluster sampling, but in this design new samples are taken from each cluster sampled. 
