--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -237,6 +237,7 @@
 				</div>
 			</div>
 			<div class="col-md-2">
+			<div class="active-workspace"><span class="active-workspace-label">--None--</span></div>
 				<div class="logo">
 <!-- 					<img src="img/of_calc_logo.png" width="40em">CALC -->
 <!-- 					<img src="img/of-logo.png" width="30em">pen Foris Calc -->
@@ -246,6 +247,7 @@
 					<div class="calc-options">
 <!-- 							<div class="col-md-12"><button class="btn btn-default quick-start"><i class="fa fa-book"></i>&nbsp Quick Start Guide</button></div> -->
 							<div class="col-md-12 application-version-container">CALC <span class="application-version"></span></div>
+							<div class="col-md-12"><a class="btn btn-action width100" href="doc/guide.pdf" target="_blank"><i class="fa fa-file-text"></i>&nbsp;User Manual</a></div>
 							<div class="col-md-12 of-link-container">
 								<a class="of-link" href="http://www.openforis.org/" target="_blank"><img src="img/openforis_logo.png"></a>
 <!-- 								<a class="of-link" href="http://www.openforis.org/tools/calc.html" target="_blank"><img src="img/openforis_logo.png"></a> -->
