fixed sd import data

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -241,14 +241,11 @@
 				<div class="logo">
 					<button class="calc-btn"><img src="img/of_calc_logo.png" width="40px"></button>
 					<div class="calc-options">
-<!-- 							<div class="col-md-12"><button class="btn btn-default quick-start"><i class="fa fa-book"></i>&nbsp Quick Start Guide</button></div> -->
-							<div class="col-md-12"><a class="btn btn-action width100" href="doc/guide.pdf" target="_blank"><img src="img/of_calc_logo.png" width="15px">&nbsp;Calc User Manual&nbsp;<i class="fa fa-book"></i></a></div>
-							<div class="col-md-12"><a class="btn btn-action width100" href="doc/guide.pdf" target="_blank"><img alt="" src="img/xsaiku_free_small.png" width="15px" height="15px">&nbsp;Saiku With Calc User Manual&nbsp;<i class="fa fa-book"></i></a></div>
+<!-- 							<div class="col-md-12"><a class="btn btn-action width100" href="doc/guide.pdf" target="_blank"><img src="img/of_calc_logo.png" width="15px">&nbsp;Calc User Manual&nbsp;<i class="fa fa-book"></i></a></div> -->
+<!-- 							<div class="col-md-12"><a class="btn btn-action width100" href="doc/guide.pdf" target="_blank"><img alt="" src="img/xsaiku_free_small.png" width="15px" height="15px">&nbsp;Saiku With Calc User Manual&nbsp;<i class="fa fa-book"></i></a></div> -->
 							<div class="col-md-12 application-version-container">CALC <span class="application-version"></span></div>
-<!-- 							<div class="col-md-12"><a class="btn btn-action width100" href="doc/guide.pdf" target="_blank"><i class="fa fa-file-text"></i>&nbsp;<img src="img/of_calc_logo.png" width="15px">User Manual</a></div> -->
 							<div class="col-md-12 of-link-container">
 								<a class="of-link" href="http://www.openforis.org/" target="_blank"><img src="img/openforis_logo.png"></a>
-<!-- 								<a class="of-link" href="http://www.openforis.org/tools/calc.html" target="_blank"><img src="img/openforis_logo.png"></a> -->
 							</div>
 					</div>
 				</div>
