changed sd area weight / updated boolean variables

--- a/calc-webapp/src/main/webapp/html/settings/sampling-design.html
+++ b/calc-webapp/src/main/webapp/html/settings/sampling-design.html
@@ -23,10 +23,12 @@
 						</div>
 						<div class="hint step-1">
 							<i class="fa fa-hand-o-right"></i>&nbsp;The base unit is the first level of aggregation. (i.e. a plot, subplot, or a section within a plot).
-							<br/><i class="fa fa-hand-o-right"></i>&nbsp;Use area weighting when the total area per strata or reporting unit is known.
+<!-- 							<br/><i class="fa fa-hand-o-right"></i>&nbsp;Use area weighting when the total area per strata or reporting unit is known. -->
+							<br/><i class="fa fa-hand-o-right"></i>&nbsp;Use area weighting when each proportion of each plot falling in a domain is estimated by the proportion of the plot areas falling in the domain
 							<br/>
 							<div class="checkbox" style="text-transform: none;">
-								<label> <input type="checkbox" name="apply_area_weighted"> Apply area weighted method (by base unit area) </label>
+								<!-- <label> <input type="checkbox" name="apply_area_weighted"> Apply area weighted method (by base unit area) </label> -->
+								<button class="btn apply_area_weighted" name="apply_area_weighted">Apply area weighted method (by base unit area)</button>
 							</div>
 						</div>
 						<div class="hint step-2">
