open processing chain in RStudio directly/execute chain automatically w/o using RStudio

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -74,10 +74,13 @@
 					 					<img alt="" src="img/cv.png">
 					 				</button>
 				 				</div>
-				 				<div class="col-md-6 no-padding height50">
+				 				<div class="col-md-6 no-padding height50 r-buttons">
+				 					<button type="button" class="btn btn-RStudio" ">
+										<img src="img/r-studio.png" width="45px" height="16px">
+					 				</button>
 				 					<button type="button" class="btn btn-R" href="">
 										<i class="fa fa-download"></i>
-										<img src="img/R_logo.svg.png" width="20px" height="20px">
+										<img src="img/R_logo.svg.png" width="16px" height="16px">
 					 				</button>
 				 				</div>
 <!-- 				 				<div class="col-md-6 no-padding height50"> -->
@@ -530,6 +533,8 @@
   	<script src="./js/codemirror/addon/fold/comment-fold.js"></script>
   	<script src="./js/codemirror/addon/hint/show-hint.js"></script>
   	<script src="./js/codemirror/addon/display/fullscreen.js"></script>
+<!--   	velocity js -->
+  	<script src="./js/velocity/velocity.min.js"></script>
   	
 	<!-- utils -->
 	<script src="./js/calc/utils/utils.js"></script>
