added system settings

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -200,6 +200,18 @@
 	 				</div>
 		  		</div>
 	  			
+	  			<div class="row group" id="system-settings">
+		 			<div class="row group-header">
+			  			<div class="col-md-8 col-md-offset-2">
+			  				System
+			  			</div>
+			  		</div>
+		  			<div class="row group-buttons">
+		 				<button type="button" class="btn btn-default btn-home settings-btn" href="system-property.html">
+		 					<i class="fa fa-cog" aria-hidden="true" style="font-size: 4.2rem;"></i>
+	 					</button>		 				
+	 				</div>
+		  		</div>
 		  		
 	  			<!-- data import settings -->
 <!-- 		  		<div class="row group"> -->
@@ -540,16 +552,23 @@
 	<script src="./js/calc/utils/utils.js"></script>
 	<script src="./js/calc/utils/array-utils.js"></script>
 	
-	<!-- ==== Custom javascript -->
-	<script src="./js/calc/calc.js"></script>
+	
 	<script src="./js/calc/calc-stringutils.js"></script>
+	
+	<!-- AJAX -->
+	<script src="./js/calc/ajax.js"></script>
+	
+	<!-- ==== CALC javascript -->
+	<script src="./js/calc/calc.js"></script>
+	<script src="./js/calc/calc-system-property.js"></script>
+	
 	<script src="./js/calc/calc-ui.js"></script>
 	<script src="./js/calc/calc-ui-form.js"></script>
 	<script src="./js/calc/calc-autocomplete.js"></script>
 	<script src="./js/calc/r-script.js"></script>
 	<script src="./js/calc/ui/r-editor.js"></script>
 	<script src="./js/calc/manager/ui/calc-options.js"></script>
-		
+	
 	<!-- ui components -->
 	<script src="./js/calc/ui/jquery-ext.js"></script>
 	<script src="./js/calc/ui/progress-bar.js"></script>
