added remove equation list

--- a/calc-webapp/src/main/webapp/equation-list.html
+++ b/calc-webapp/src/main/webapp/equation-list.html
@@ -2,10 +2,10 @@
 
 	<div class="col-md-12 height100 view-section" style="overflow: hidden;">
 	
-		<div class="row col-md-2 list height100">
+		<div class="row col-md-3 list height100">
 			<div class="height10 upload-csv-form-section">
 				<form class="upload-csv-form"  method="post" enctype="multipart/form-data" action="rest/csv-upload.json">
-					<button type="button" class="btn btn-default width100" name="upload-btn">Upload Csv</button>
+					<button type="button" class="btn btn-default width60" name="upload-btn"><i class="fa fa-upload" aria-hidden="true"></i> Upload Csv</button>
 				    <input type="file" name="file" style="display:none" />  
 				</form>
 			</div>
@@ -13,7 +13,7 @@
 			<div class="equation-lists height90" style="overflow: auto;"></div>
 		</div>
 		
-		<div class="col-md-offset-1 col-md-9 height100" style="overflow: auto">
+		<div class="col-md-9 height100" style="overflow: auto; padding-left: 5rem;">
 			<table class="table equations-table">
 		        <thead>
 		        	<tr>
