--- a/calc-webapp/src/main/webapp/system-property.html
+++ b/calc-webapp/src/main/webapp/system-property.html
@@ -13,17 +13,7 @@
 			</div>
 			
 			<div class="row height60">
-				<div class="col-md-8 col-md-offset-2 form-section">
-
-<!-- 					<div class="form-group"> -->
-<!-- 						<label class="col-md-2 control-label">Caption</label> -->
-<!-- 						<div class="col-md-10"> -->
-<!-- 							<input type="text" class="form-control" name="caption"> -->
-<!-- 						</div> -->
-<!-- 					</div> -->
-					
-
-				</div>
+				<div class="col-md-8 col-md-offset-2 form-section"></div>
 			</div>
 
 			<div class="row height20">
